tasking save point

--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -19,7 +19,7 @@ windows:
 
             # Service Health Checks
             echo "📡 Service Health Status:"
-            for service in "erebus:3000" "nullblock-agents:9003" "nullblock-mcp:8001" "nullblock-orchestration:8002" "frontend:5173"; do
+            for service in "erebus:3000" "nullblock-agents:9003" "nullblock-mcp:8001" "frontend:5173"; do
               name=$(echo $service | cut -d: -f1)
               port=$(echo $service | cut -d: -f2)
               if curl -s --max-time 3 "http://localhost:$port/health" > /dev/null 2>&1; then
@@ -64,18 +64,32 @@ windows:
           done
         - |
           echo "📊 Task Management Metrics"
-          echo "Real-time task and event monitoring..."
+          echo "Real-time task and wallet-filtered task monitoring..."
           echo ""
           mkdir -p logs
           while true; do
             echo "$(date '+%Y-%m-%d %H:%M:%S') [METRICS] Task system status..." | tee -a logs/task-metrics.log
-            if curl -s --max-time 5 "http://localhost:9003/tasks" > /dev/null 2>&1; then
-              task_count=$(curl -s "http://localhost:9003/tasks" | jq '.total // 0' 2>/dev/null || echo "0")
-              echo "📋 Total tasks: $task_count" | tee -a logs/task-metrics.log
+
+            # Test task endpoints (both direct and via Erebus)
+            if curl -s --max-time 5 "http://localhost:3000/api/agents/tasks" > /dev/null 2>&1; then
+              # Via Erebus (production route)
+              task_response=$(curl -s "http://localhost:3000/api/agents/tasks" 2>/dev/null)
+              if echo "$task_response" | jq -e '.data' > /dev/null 2>&1; then
+                task_count=$(echo "$task_response" | jq '.data | length' 2>/dev/null || echo "0")
+                echo "📋 Tasks via Erebus: $task_count" | tee -a logs/task-metrics.log
+              else
+                total_count=$(echo "$task_response" | jq '.total // 0' 2>/dev/null || echo "0")
+                echo "📋 Total tasks: $total_count" | tee -a logs/task-metrics.log
+              fi
+
+              # Hecate agent model status
               echo "🎯 Agent model status:" | tee -a logs/task-metrics.log
               curl -s "http://localhost:9003/hecate/model-status" | jq -r '"  Model: " + (.current_model // "unknown") + " | Status: " + (.status // "unknown")' 2>/dev/null | tee -a logs/task-metrics.log
+
+              # Wallet-based filtering test
+              echo "🔐 Wallet filtering: Active (x-wallet-address headers)" | tee -a logs/task-metrics.log
             else
-              echo "❌ Task system not available" | tee -a logs/task-metrics.log
+              echo "❌ Task system not available via Erebus" | tee -a logs/task-metrics.log
             fi
             sleep 45
           done
@@ -91,8 +105,8 @@ windows:
             echo "curl http://localhost:9003/health (Agents)"
             curl -s --max-time 3 "http://localhost:9003/health" | jq . 2>/dev/null || echo "❌ Failed"
             echo ""
-            echo "curl http://localhost:9003/tasks (Task Management)"
-            curl -s --max-time 3 "http://localhost:9003/tasks" | jq '.total // "error"' 2>/dev/null || echo "❌ Failed"
+            echo "curl http://localhost:3000/api/agents/tasks (Task Management via Erebus)"
+            curl -s --max-time 3 "http://localhost:3000/api/agents/tasks" | jq '.data // .total // "error"' 2>/dev/null || echo "❌ Failed"
             sleep 60
           done
 
@@ -218,7 +232,7 @@ windows:
               # Task status breakdown
               echo "📊 Total: Tasks=$task_count | Users=$user_ref_count | Agents=$agent_count" | tee -a logs/agents-db.log
 
-              # Task status distribution
+              # Task status distribution (aligned with new simplified status enum)
               created_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE status='created';" 2>/dev/null | xargs)
               running_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE status='running';" 2>/dev/null | xargs)
               completed_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE status='completed';" 2>/dev/null | xargs)
@@ -227,6 +241,10 @@ windows:
               cancelled_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE status='cancelled';" 2>/dev/null | xargs)
 
               echo "📋 Status: Created=$created_tasks | Running=$running_tasks | Completed=$completed_tasks | Failed=$failed_tasks | Paused=$paused_tasks | Cancelled=$cancelled_tasks" | tee -a logs/agents-db.log
+
+              # Action tracking metrics (new feature)
+              actioned_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE actioned_at IS NOT NULL;" 2>/dev/null | xargs)
+              echo "⚡ Actions: $actioned_tasks tasks have been processed by agents" | tee -a logs/agents-db.log
 
               # Recent activity
               recent_tasks=$(docker exec nullblock-postgres-agents psql -U postgres -d agents -t -c "SELECT COUNT(*) FROM tasks WHERE created_at >= NOW() - INTERVAL '1 hour';" 2>/dev/null | xargs)
@@ -414,7 +432,7 @@ windows:
           mkdir -p logs
           tail -f logs/mcp-server.log 2>/dev/null || echo "⚠️ Waiting for MCP logs..."
 
-  - nullblock-orchestration:
+  - task-management:
       layout: tiled
       pre_window: |
         if [ -f .env.dev ]; then
@@ -422,35 +440,30 @@ windows:
         fi
       panes:
         - |
-          echo "🔄 Starting Orchestration Service..."
-          cd svc/nullblock-orchestration
-          echo "Installing/updating dependencies with hatch..."
-          hatch -e default run pip install -e .
-          export ORCHESTRATION_HOST=0.0.0.0
-          export ORCHESTRATION_PORT=8002
-          export DATABASE_URL="postgresql://postgres:REDACTED_DB_PASS@localhost:5441/agents"
-          echo "📝 Starting orchestration service with database connection..."
-          hatch run python3 -m orchestration 2>&1 | tee logs/orchestration.log
-        - |
-          echo "🗄️  Orchestration Database Monitoring"
-          echo "PostgreSQL monitoring for workflow data..."
+          echo "📋 Task Management System"
+          echo "The orchestration service has been integrated into the Hecate Agent (Rust)"
+          echo "Task management is now handled directly by the agents service on port 9003"
           echo ""
-          mkdir -p logs
+          echo "🔄 Monitoring Task System Performance..."
           while true; do
-            echo "$(date '+%Y-%m-%d %H:%M:%S') [ORCH-DB] Database status..." | tee -a logs/orchestration-db.log
-            if pg_isready -h localhost -p 5432 > /dev/null 2>&1; then
-              echo "✅ PostgreSQL connection healthy" | tee -a logs/orchestration-db.log
+            echo "$(date '+%Y-%m-%d %H:%M:%S') [TASK-SYS] Task system metrics..."
+
+            # Task API health via Erebus
+            if curl -s --max-time 3 "http://localhost:3000/api/agents/tasks" > /dev/null 2>&1; then
+              echo "✅ Task API via Erebus - Healthy"
             else
-              echo "❌ PostgreSQL connection failed" | tee -a logs/orchestration-db.log
+              echo "❌ Task API via Erebus - Failed"
             fi
-            sleep 45
+
+            # Direct agent API health
+            if curl -s --max-time 3 "http://localhost:9003/health" > /dev/null 2>&1; then
+              echo "✅ Hecate Agent Direct API - Healthy"
+            else
+              echo "❌ Hecate Agent Direct API - Failed"
+            fi
+
+            sleep 60
           done
-        - |
-          echo "🔄 Orchestration Service Logs & Health"
-          echo "Monitoring orchestration service logs and workflow processing..."
-          echo ""
-          mkdir -p logs
-          tail -f logs/orchestration.log 2>/dev/null || echo "⚠️ Waiting for orchestration logs..."
 
   - frontend:
       panes:
@@ -461,7 +474,6 @@ windows:
           npm install
           export VITE_MCP_API_URL=http://localhost:8001
           export VITE_EREBUS_API_URL=http://localhost:3000
-          export VITE_ORCHESTRATION_API_URL=http://localhost:8002
           export VITE_HECATE_API_URL=http://localhost:9003
           echo "🚀 Starting React development server..."
           npm run develop
@@ -485,7 +497,7 @@ on_project_start: |
   echo ""
   echo "🗄️ Starting infrastructure services..."
   echo "Starting PostgreSQL, Redis, Kafka, and Zookeeper containers..."
-  docker-compose up postgres-agents postgres-erebus postgres-mcp postgres-orchestration redis kafka zookeeper -d
+  docker-compose up postgres-agents postgres-erebus redis kafka zookeeper -d
   echo "⏳ Waiting for services to become healthy..."
   sleep 15
   echo "🔍 Checking service health..."
@@ -499,7 +511,6 @@ on_project_start: |
   echo "📡 Service Ports:"
   echo "   🌐 Erebus (unified router): http://localhost:3000"
   echo "   🧠 MCP Server: http://localhost:8001"
-  echo "   🔄 Orchestration: http://localhost:8002"
   echo "   🎯 Hecate Agent (Rust): http://localhost:9003"
   echo "   🎨 Frontend: http://localhost:5173"
   echo ""
@@ -512,14 +523,19 @@ on_project_start: |
   echo "   🎯 Default Model: deepseek/deepseek-chat-v3.1:free ($0.00)"
   echo "   💰 Cost Tracking: Real-time monitoring & analytics"
   echo ""
+  echo "📋 Task Management:"
+  echo "   🏗️  Architecture: Simplified & wallet-based filtering"
+  echo "   📊 Categories: Todo, Running, Completed tabs"
+  echo "   🔐 Security: Wallet-scoped tasks with headers"
+  echo "   ⚡ Actions: Full lifecycle tracking & agent execution"
+  echo ""
   echo "📊 Tabs Overview:"
-  echo "   📝 logs - Real-time service logs & health monitoring"
-  echo "   💻 workspace - Development commands & SDK tools"
-  echo "   🏗️  infrastructure - PostgreSQL, Redis, IPFS"
-  echo "   🔧 backend - MCP, Orchestration, Erebus services"
-  echo "   🤖 agents - Hecate (Rust) agent server"
-  echo "   🎨 frontend - React development server"
-  echo "   📊 monitoring - OpenRouter & model performance analytics"
+  echo "   📝 monitoring - Real-time service health & task metrics"
+  echo "   🔗 erebus - Unified router with wallet & session management"
+  echo "   🎯 nullblock-agents - Hecate Agent (Rust) with task system"
+  echo "   🧠 nullblock-mcp - MCP server with protocol operations"
+  echo "   📋 task-management - Integrated task system monitoring"
+  echo "   🎨 frontend - React development server with wallet integration"
 
 on_project_stop: |
   echo "Stopping development services..."
