--- a/svc/nullblock-protocols/Cargo.toml
+++ b/svc/nullblock-protocols/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["NullBlock Team"]
 [dependencies]
 axum = "0.7"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tokio-stream = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower = "0.4"
@@ -17,3 +18,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.12", features = ["json"] }
+futures = "0.3"
+rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
