--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -15,6 +15,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] 
 tracing-appender = "0.2"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+futures = "0.3"
 hex = "0.4"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
