--- a/svc/nullblock-protocols/Cargo.toml
+++ b/svc/nullblock-protocols/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["NullBlock Team"]
 [dependencies]
 axum = "0.7"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-tokio-stream = "0.1"
+tokio-stream = { version = "0.1", features = ["sync"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower = "0.4"
