--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -19,3 +19,5 @@ reqwest = { version = "0.11", features = ["json", "stream"] }
 futures = "0.3"
 hex = "0.4"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
+regex = "1.10"
+lazy_static = "1.4"
