--- a/scripts/nullblock-dev-mac.yml
+++ b/scripts/nullblock-dev-mac.yml
@@ -14,39 +14,12 @@ windows:
       layout: tiled
       pre_window: |
         if [ -f .env.dev ]; then
-          export $(grep -v '^#' .env.dev | xargs -0)
+          set -a
+          source .env.dev
+          set +a
         fi
       panes:
-        - |
-          echo "🔗 Starting Erebus Server (Rust)..."
-          cd svc/erebus
-          mkdir -p logs
-          export EREBUS_HOST=127.0.0.1
-          export EREBUS_PORT=3000
-          export DATABASE_URL="postgresql://postgres:REDACTED_DB_PASS@localhost:5440/erebus"
-          export KAFKA_BOOTSTRAP_SERVERS="localhost:9092"
-          echo "📝 Logs will be written to logs/erebus.log"
-          echo ""
-          echo "🗄️  Waiting for Erebus database to be ready..."
-          while ! docker exec nullblock-postgres-erebus pg_isready -U postgres > /dev/null 2>&1; do
-            echo "⏳ Waiting for Erebus PostgreSQL container to be ready..."
-            sleep 2
-          done
-          echo "✅ Erebus database connection ready"
-          echo ""
-          echo "📋 Running Erebus database migrations..."
-          ~/nullblock/scripts/run-erebus-migrations.sh
-          echo "✅ Erebus migrations complete"
-          echo ""
-          echo "📨 Waiting for Kafka to be ready..."
-          while ! docker exec nullblock-kafka kafka-broker-api-versions --bootstrap-server localhost:9092 > /dev/null 2>&1; do
-            echo "⏳ Waiting for Kafka container to be ready..."
-            sleep 3
-          done
-          echo "✅ Kafka connection ready"
-          echo ""
-          echo "🚀 Starting Erebus Rust server..."
-          cargo run 2>&1 | tee logs/erebus.log
+        - ~/nullblock/scripts/start-erebus.sh
         - ~/nullblock/scripts/monitor-erebus-db.sh
         - ~/nullblock/scripts/monitor-erebus-redis.sh
         - ~/nullblock/scripts/tail-erebus-logs.sh
@@ -55,7 +28,9 @@ windows:
       layout: tiled
       pre_window: |
         if [ -f .env.dev ]; then
-          export $(grep -v '^#' .env.dev | xargs -0)
+          set -a
+          source .env.dev
+          set +a
         fi
       panes:
         - ~/nullblock/scripts/start-agents.sh
@@ -67,31 +42,12 @@ windows:
       layout: tiled
       pre_window: |
         if [ -f .env.dev ]; then
-          export $(grep -v '^#' .env.dev | xargs -0)
+          set -a
+          source .env.dev
+          set +a
         fi
       panes:
-        - |
-          echo "🌐 Starting Protocol Server..."
-          cd svc/nullblock-protocols
-          echo "🦀 Starting Rust protocol service with A2A and MCP support..."
-          export PORT=8001
-          export DATABASE_URL="postgresql://postgres:REDACTED_DB_PASS@localhost:5441/agents"
-          echo ""
-          echo "🗄️  Waiting for Agents database to be ready..."
-          while ! docker exec nullblock-postgres-agents pg_isready -U postgres > /dev/null 2>&1; do
-            echo "⏳ Waiting for Agents PostgreSQL container to be ready..."
-            sleep 2
-          done
-          echo "✅ Agents database connection ready"
-          echo ""
-          echo "📝 Starting protocol server with database connection..."
-          echo "🔗 A2A JSON-RPC endpoint: http://localhost:8001/a2a/jsonrpc"
-          echo "🌐 A2A REST endpoints: http://localhost:8001/v1/*"
-          echo "📄 Agent Card: http://localhost:8001/v1/card"
-          echo "📨 Messages: POST /v1/messages, /v1/messages/stream"
-          echo "📋 Tasks: GET /v1/tasks, /v1/tasks/:id, POST /v1/tasks/:id/cancel"
-          echo ""
-          cargo run 2>&1 | tee logs/protocols-server.log
+        - ~/nullblock/scripts/start-protocols.sh
         - ~/nullblock/scripts/monitor-protocol-db.sh
         - ~/nullblock/scripts/monitor-protocol-health.sh
         - ~/nullblock/scripts/tail-protocol-logs.sh
@@ -100,7 +56,9 @@ windows:
       layout: tiled
       pre_window: |
         if [ -f .env.dev ]; then
-          export $(grep -v '^#' .env.dev | xargs -0)
+          set -a
+          source .env.dev
+          set +a
         fi
       panes:
         - ~/nullblock/scripts/monitor-task-system.sh
