--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -18,6 +18,9 @@ chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json", "stream"] }
 futures = "0.3"
 hex = "0.4"
+aes-gcm = "0.10"
+rand = "0.8"
+thiserror = "1.0"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
 regex = "1.10"
 lazy_static = "1.4"
