--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -31,6 +31,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.0",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.27",
     "@tanstack/react-query": "^5.90.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@wallet-standard/solana": "^0.1.0-alpha.4",
